--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://deltade-dirac.github.io/movie-app",
+  "homepage": "https://deltade-dirac.github.io/react-movie-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
